--- a/observatorio.saude/appsettings.Docker.json
+++ b/observatorio.saude/appsettings.Docker.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=host.docker.internal;Port=5432;Database=postgres;Username=postgres;Password=12345"
+    "DefaultConnection": "Host=ep-raspy-flower-a8dad44s-pooler.eastus2.azure.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_TqBL6eu2VcQy;SslMode=Require"
   },
   "EtlScheduledJobSettings": {
     "IntervalInMinutes": 60
