--- a/observatorio.saude/appsettings.json
+++ b/observatorio.saude/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=postgres;Username=postgres;Password=12345"
+    "DefaultConnection": "Host=ep-raspy-flower-a8dad44s-pooler.eastus2.azure.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_TqBL6eu2VcQy;SslMode=Require"
   },
   "EtlScheduledJobSettings": {
     "IntervalInMinutes": 60
