--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,46 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/reference/configuration-reference
+# Use a versão 2.1 do motor de pipeline do CircleCI.
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/guides/orchestrate/jobs-steps/#jobs-overview & https://circleci.com/docs/reference/configuration-reference/#jobs
+# Orbs são pacotes de configuração reutilizáveis. O orb do .NET simplifica
+# tarefas comuns como restaurar pacotes, compilar e testar.
+# Veja: https://circleci.com/developer/orbs/orb/circleci/dotnet
+orbs:
+  dotnet: circleci/dotnet@2.2.0
+
+# Define os jobs a serem executados.
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/guides/execution-managed/executor-intro/ & https://circleci.com/docs/reference/configuration-reference/#executor-job
+  build-and-test:
+    # Especifica o ambiente de execução. Usaremos uma imagem Docker mantida
+    # pela CircleCI que já vem com o SDK do .NET 8 instalado.
+    # Veja: https://circleci.com/developer/images/image/cimg/dotnet
     docker:
-      # Specify the version you desire here
-      # See: https://circleci.com/developer/images/image/cimg/base
-      - image: cimg/base:current
+      - image: cimg/dotnet:8.0
 
-    # Add steps to the job
-    # See: https://circleci.com/docs/guides/orchestrate/jobs-steps/#steps-overview & https://circleci.com/docs/reference/configuration-reference/#steps
+    # Define os passos a serem executados dentro do job.
     steps:
-      # Checkout the code as the first step.
+      # 1. Baixa o código do seu repositório.
       - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/guides/orchestrate/workflows/ & https://circleci.com/docs/reference/configuration-reference/#workflows
+      # 2. Restaura as dependências do NuGet.
+      # Este comando do orb gerencia o cache automaticamente para acelerar builds futuros.
+      - dotnet/restore:
+          name: "Restaurando pacotes NuGet"
+
+      # 3. Compila a solução em modo Release.
+      - run:
+          name: "Compilando a solução"
+          # O argumento --no-restore evita baixar os pacotes novamente.
+          command: dotnet build --configuration Release --no-restore
+
+      # 4. Executa os testes da sua solução.
+      # Este comando do orb também gerencia o cache e pode salvar os resultados dos testes.
+      - dotnet/test:
+          name: "Executando os testes"
+          configuration: "Release"
+          no_build: true # Evita que o projeto seja compilado novamente.
+
+# Orquestra os jobs em um workflow.
 workflows:
-  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  build-test-dotnet:
     jobs:
-      - say-hello
+      - build-and-test
