--- a/observatorio.saude/observatorio.saude.csproj
+++ b/observatorio.saude/observatorio.saude.csproj
@@ -42,6 +42,10 @@
       <Content Update="cnes.py">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+      <PackageReference Include="JunitXml.TestLogger" Version="3.1.12">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
