--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,46 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/reference/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/guides/orchestrate/jobs-steps/#jobs-overview & https://circleci.com/docs/reference/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/guides/execution-managed/executor-intro/ & https://circleci.com/docs/reference/configuration-reference/#executor-job
+  build-and-test:
     docker:
-      # Specify the version you desire here
-      # See: https://circleci.com/developer/images/image/cimg/base
-      - image: cimg/base:current
-
-    # Add steps to the job
-    # See: https://circleci.com/docs/guides/orchestrate/jobs-steps/#steps-overview & https://circleci.com/docs/reference/configuration-reference/#steps
+      - image: mcr.microsoft.com/dotnet/sdk:8.0
+    working_directory: ~/project/backend
     steps:
-      # Checkout the code as the first step.
       - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/guides/orchestrate/workflows/ & https://circleci.com/docs/reference/configuration-reference/#workflows
+      - restore_cache:
+          keys:
+            - nuget-packages-{{ checksum "observatorio.saude/obj/project.assets.json" }}
+            - nuget-packages-
+
+      - run:
+          name: Restore (solution)
+          command: dotnet restore observatorio.saude.sln
+
+      - save_cache:
+          paths:
+            - ~/.nuget/packages
+          key: nuget-packages-{{ checksum "observatorio.saude/obj/project.assets.json" }}
+
+      - run:
+          name: Build
+          command: dotnet build observatorio.saude.sln --configuration Release --no-restore
+
+      - run:
+          name: Run tests
+          command: |
+            mkdir -p TestResults
+            dotnet test --no-build --configuration Release --logger "trx;LogFileName=TestResults/results.trx"
+
+      - store_test_results:
+          path: TestResults
+
+      - store_artifacts:
+          path: TestResults
+          destination: test-results
+
 workflows:
-  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  version: 2
+  ci:
     jobs:
-      - say-hello
+      - build-and-test
