ci: ajuste workdirectory

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build-and-test:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:8.0
-    working_directory: ~/project/backend
+    working_directory: ~/backend
     steps:
       - checkout
 
