--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,8 @@ jobs:
 
       - run:
           name: Run tests
-          command: |
-            dotnet test --no-build --configuration Release --logger "trx;LogFileName=TestResults/results.trx"
+          command: 
+            (mkdir TestResults) -and (dotnet test --no-build --configuration Release --logger "trx;LogFileName=TestResults/results.trx")
 
       - store_test_results:
           path: TestResults
