feat: implementa retorno de detalhes e cobertura de estados

--- a/observatorio.saude/appsettings.Development.json
+++ b/observatorio.saude/appsettings.Development.json
@@ -10,5 +10,8 @@
   },
   "EtlScheduledJobSettings": {
     "IntervalInMinutes": 60
+  },
+  "Ibge": {
+    "FindUf": "https://servicodados.ibge.gov.br/api/v3/agregados/6579/periodos/2025/variaveis/9324?localidades=N3[all]"
   }
 }
