--- a/observatorio.saude/appsettings.json
+++ b/observatorio.saude/appsettings.json
@@ -13,6 +13,7 @@
     "IntervalInMinutes": 60
   },
   "Ibge": {
-    "FindUf": "https://servicodados.ibge.gov.br/api/v3/agregados/6579/periodos/2025/variaveis/9324?localidades=N3[all]"
+    "FindPopulacaoUf": "https://servicodados.ibge.gov.br/api/v3/agregados/6579/periodos/2025/variaveis/9324?localidades=N3[all]",
+    "FindUf": "https://servicodados.ibge.gov.br/api/v1/localidades/estados"
   }
 }
