feat: adiciona novo db e ajusat etl job

--- a/observatorio.saude/appsettings.json
+++ b/observatorio.saude/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=ep-raspy-flower-a8dad44s-pooler.eastus2.azure.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_TqBL6eu2VcQy;SslMode=Require"
+    "DefaultConnection": "Host=ep-divine-dream-a43cllhh.us-east-1.pg.koyeb.app;Port=5432;Database=koyebdb;Username=koyeb-adm;Password=npg_97sTmaAlRozU;SslMode=Require"
   },
   "EtlScheduledJobSettings": {
     "IntervalInMinutes": 60
