--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,12 +35,16 @@ jobs:
           name: Run Tests and Collect Coverage
           command: |
             mkdir TestResults\junit
-            dotnet test observatorio.saude.Tests/observatorio.saude.Tests.csproj --no-build --configuration Release --results-directory TestResults --logger "junit;LogFilePath=TestResults\junit\results.xml;MethodFormat=Class" --collect:"XPlat Code Coverage;Format=cobertura"
+            dotnet test --no-build --configuration Release --results-directory TestResults --logger "junit;LogFilePath=TestResults\junit\results.xml;MethodFormat=Class" --collect:"XPlat Code Coverage"
 
       - run:
           name: Generate HTML Coverage Report
           command: |
             reportgenerator "-reports:TestResults\**\coverage.cobertura.xml" "-targetdir:CoverageReport" "-reporttypes:Html"
+          when: always
+      - run:
+          name: Check for generated files
+          command: dir /s TestResults
           when: always
 
       - store_test_results:
