--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
           command: |
             dotnet tool install --global trx2junit
             mkdir JunitResults
-            trx2junit "TestResults\**\*.trx" --output JunitResults
+            trx2junit "TestResults\*.trx" --output JunitResults
             
       - run:
           name: Generate HTML Coverage Report
