--- a/observatorio.saude/appsettings.json
+++ b/observatorio.saude/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=ep-raspy-flower-a8dad44s-pooler.eastus2.azure.neon.tech;Port=5432;Database=neondb;Username=neondb_owner;Password=npg_TqBL6eu2VcQy;SslMode=Require"
+    "DefaultConnection": "Host=35.247.201.10;Port=5432;Database=observatorio-saude;Username=observatorio-saude-app;Password=Observatorio*123321;SslMode=Require"
   },
   "EtlScheduledJobSettings": {
-    "IntervalInMinutes": 60
+    "IntervalInMinutes": 1440
   },
   "Ibge": {
     "FindPopulacaoUf": "https://servicodados.ibge.gov.br/api/v3/agregados/6579/periodos/2025/variaveis/9324?localidades=N3[all]",
