--- a/observatorio.saude/observatorio.saude.csproj
+++ b/observatorio.saude/observatorio.saude.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0"/>
         <PackageReference Include="ClosedXML" Version="0.105.0"/>
         <PackageReference Include="CsvHelper" Version="33.1.0"/>
+        <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0"/>
         <PackageReference Include="FluentAssertions" Version="8.6.0"/>
         <PackageReference Include="MediatR" Version="13.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.8"/>
