feat: enhance Railway deployment process with project linking step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,17 +70,19 @@ jobs:
       - store_artifacts:
           path: TestResults
           destination: raw-test-results
-          
+
   deploy-railway:
     docker:
       - image: ghcr.io/railwayapp/cli:latest
     steps:
-      - checkout
-      - run:
-          name: Deploy to Railway
-          command: |
-            railway up --detach
-
+    - checkout
+    - run:
+        name: Link to Railway project
+        command: |
+          railway link --project $RAILWAY_PROJECT_ID --environment $RAILWAY_ENV_ID --service $RAILWAY_SERVICE_ID
+    - run:
+        name: Deploy to Railway
+        command: railway up --detach
 workflows:
   version: 2
   ci:
