fix: adjust deployment steps in Railway configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,14 +72,16 @@ jobs:
           destination: raw-test-results
 
   deploy-railway:
-    docker:
-      - image: ghcr.io/railwayapp/cli:latest
-    steps:
+  docker:
+    - image: ghcr.io/railwayapp/cli:latest
+  steps:
     - checkout
     - run:
-        name: Link to Railway project
-        command: |
-          railway link --project $RAILWAY_PROJECT_ID --environment $RAILWAY_ENV_ID --service $RAILWAY_SERVICE_ID
+        name: Railway Auth
+        command: railway login --token $RAILWAY_TOKEN
+    - run:
+        name: Link to Railway Project
+        command: railway link --project $RAILWAY_PROJECT_ID --environment $RAILWAY_ENV_ID --service $RAILWAY_SERVICE_ID
     - run:
         name: Deploy to Railway
         command: railway up --detach
