fix: update Railway project linking command for improved readability

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,12 +77,12 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Railway Auth
-          command: railway login --token $RAILWAY_TOKEN
-      - run:
           name: Link to Railway project
           command: |
-            railway link --project "$RAILWAY_PROJECT_ID" --environment "$RAILWAY_ENV_ID" --service "$RAILWAY_SERVICE_ID"
+            railway link \
+              --project $RAILWAY_PROJECT_ID \
+              --environment $RAILWAY_ENV_ID \
+              --service $RAILWAY_SERVICE_ID
       - run:
           name: Deploy to Railway
           command: railway up --detach
