--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,15 +74,14 @@ jobs:
   deploy-railway:
     docker:
       - image: ghcr.io/railwayapp/cli:latest
+    environment:
+      RAILWAY_NON_INTERACTIVE: "true"
     steps:
       - checkout
       - run:
-          name: Link to Railway project
+          name: Test Railway Token
           command: |
-            railway link \
-              --project $RAILWAY_PROJECT_ID \
-              --environment $RAILWAY_ENV_ID \
-              --service $RAILWAY_SERVICE_ID
+            railway status || { echo "[ERRO] Falha na autenticação Railway"; exit 1; }
       - run:
           name: Deploy to Railway
           command: railway up --detach
