--- a/observatorio.saude/appsettings.Docker.json
+++ b/observatorio.saude/appsettings.Docker.json
@@ -16,7 +16,7 @@
     "IntervalInMinutes": 1440
   },
   "Ibge": {
-    "FindPopulacaoUf": "https://servicodados.ibge.gov.br/api/v3/agregados/6579/periodos/2025/variaveis/9324?localidades=N3[all]",
+    "FindPopulacaoUf": "https://servicodados.ibge.gov.br/api/v3/agregados/6579/periodos/{ano}/variaveis/9324?localidades=N3[all]",
     "FindUf": "https://servicodados.ibge.gov.br/api/v1/localidades/estados"
   }
 }
