--- a/observatorio.saude/observatorio.saude.csproj
+++ b/observatorio.saude/observatorio.saude.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net10.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
@@ -15,15 +15,16 @@
         <PackageReference Include="ClosedXML" Version="0.105.0"/>
         <PackageReference Include="CsvHelper" Version="33.1.0"/>
         <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0"/>
-        <PackageReference Include="FluentAssertions" Version="8.6.0"/>
-        <PackageReference Include="MediatR" Version="13.0.0"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.8"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.9">
+        <PackageReference Include="MediatR" Version="13.1.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
+
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.0-rc.2" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.0-rc.2">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.4"/>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0-rc.2" />
+
     </ItemGroup>
 
     <ItemGroup>
