--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,21 @@
 version: 2.1
 orbs:
-  windows: circleci/windows@5.0.0
+  # ATUALIZADO: Usando uma versão mais recente do orb do Windows.
+  # Verifique no CircleCI Orb Registry qual é a última (ex: 6.0.0)
+  windows: circleci/windows@6.0.0
 
 jobs:
   build-and-test:
     executor:
+      # O 'default' do orb mais recente deve ter um SDK mais novo.
       name: windows/default
+      
+      # --- PLANO B ---
+      # Se o 'default' acima ainda falhar, descomente a linha abaixo
+      # para forçar uma imagem de VM específica e mais recente.
+      # Você pode ver as imagens disponíveis em: https://circleci.com/docs/windows-images
+      # version: 2024.07.1 # Exemplo de uma imagem recente
+        
     steps:
       - checkout
 
@@ -29,7 +39,8 @@ jobs:
 
       - run:
           name: Install ReportGenerator Tool
-          command: dotnet tool install --global dotnet-reportgenerator-globaltool --version "5.2.0"
+          # Adicionado '|| exit 0' para não falhar se já estiver instalado
+          command: dotnet tool install --global dotnet-reportgenerator-globaltool --version "5.2.0" || exit 0
 
       - run:
           name: Run Tests and Generate TRX Report
@@ -39,7 +50,8 @@ jobs:
           name: Convert TRX to JUnit XML
           when: always
           command: |
-            dotnet tool install --global trx2junit
+            # Adicionado '|| exit 0' para não falhar se já estiver instalado
+            dotnet tool install --global trx2junit || exit 0
             mkdir JunitResults
             $trxFile = (Get-ChildItem -Recurse -Filter *.trx | Select-Object -First 1).FullName
             if ($trxFile) {
@@ -67,43 +79,23 @@ jobs:
           path: CoverageReport
           destination: coverage-report
 
+      # Corrigido: O 'store_artifacts' para TestResults estava no seu
+      # arquivo original, mas o diretório não era criado.
+      # Se você quiser salvar os arquivos .trx brutos, 
+      # você precisa mover os resultados para o diretório 'TestResults'
+      - run:
+          name: Organize Raw Test Results
+          when: always
+          command: |
+            mkdir TestResults
+            Get-ChildItem -Recurse -Filter *.trx | Move-Item -Destination TestResults
+
       - store_artifacts:
           path: TestResults
           destination: raw-test-results
-
-#  deploy-railway:
-#    docker:
-#      - image: ghcr.io/railwayapp/cli:latest
-#    environment:
-#      RAILWAY_NON_INTERACTIVE: "true"
-#    steps:
-#      - checkout
-#
-#      - run:
-#          name: "DEBUG - Verificar envs Railway"
-#          command: |
-#            [ -n "$RAILWAY_TOKEN" ] && echo "[OK] RAILWAY_TOKEN set" || (echo "[ERRO] RAILWAY_TOKEN ausente" && exit 1)
-#            [ -n "$RAILWAY_PROJECT_ID" ] && echo "[OK] PROJECT_ID=$RAILWAY_PROJECT_ID" || echo "[AVISO] PROJECT_ID não definido"
-#            [ -n "$RAILWAY_ENVIRONMENT_ID" ] && echo "[OK] ENVIRONMENT_ID=$RAILWAY_ENVIRONMENT_ID" || echo "[AVISO] ENVIRONMENT_ID não definido"
-#
-#      - run:
-#          name: Test Railway Token
-#          command: |
-#            railway status || { echo "[ERRO] Falha na autenticação Railway (token inválido ou sem acesso)"; exit 1; }
-#
-#      - run:
-#          name: Deploy to Railway
-#          command: |
-#            railway up --detach
 
 workflows:
   version: 2
   ci:
     jobs:
       - build-and-test
-#      - deploy-railway:
-#          requires:
-#            - build-and-test
-#          filters:
-#            branches:
-#              only: main
