--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
   build-and-test:
     executor:
       name: windows/default
+      version: 2024.07.1
         
     steps:
       - checkout
@@ -30,7 +31,6 @@ jobs:
 
       - run:
           name: Install ReportGenerator Tool
-          # Adicionado '|| exit 0' para não falhar se já estiver instalado
           command: dotnet tool install --global dotnet-reportgenerator-globaltool --version "5.2.0" || exit 0
 
       - run:
@@ -70,10 +70,6 @@ jobs:
           path: CoverageReport
           destination: coverage-report
 
-      # Corrigido: O 'store_artifacts' para TestResults estava no seu
-      # arquivo original, mas o diretório não era criado.
-      # Se você quiser salvar os arquivos .trx brutos, 
-      # você precisa mover os resultados para o diretório 'TestResults'
       - run:
           name: Organize Raw Test Results
           when: always
